--- a/ai/requirements.txt
+++ b/ai/requirements.txt
@@ -1,3 +1,8 @@
+# Bot Requirements
+python-telegram-bot[job-queue] --pre
+python-dotenv
+# OpenAI
+
 annotated-types==0.6.0
 anyio==3.7.1
 certifi==2023.11.17
